--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
           src="./assets/avatar.png"
           alt="foto de Gabriel Farah programando em um mundo cyberpunk"
         />
-        
       </div>
       <div id="switch" onclick="toggleMode()">
-        <button>
-          
-        </button>
+        <button></button>
         <span></span>
       </div>
       <ul>
@@ -50,7 +47,6 @@
         <li>
           <a href="mailto:gabri3lfarah@gmail.com" target="_blank">E-mail</a>
         </li>
-        <li><a href="#">Ver meu Portfólio</a></li>
       </ul>
       <div id="social-links">
         <a
